1999-03-01  Gordon Matzigkeit  <gord@trick.fig.org>

	* Change all Makefiles into Makefile.ams.  Many major build
	environment changes to get Automake/Autoconf working nicely.

1999-02-28  Gordon Matzigkeit  <gord@trick.fig.org>

	* NEWS: Moved from docs/NEWS.

	* configure.in, acinclude.m4: New files for Autoconf.  From OKUJI
	Yoshinori.

	* AUTHORS, INSTALL: New files.

1999-02-24  Gordon Matzigkeit  <gord@trick.fig.org>

	* stage1/stage1.S (after_BPB): Do a hard disk probe first, so that
	we can work with IDE floppies (like the LS-120).

	* Run GNU Indent on */*.[ch].

1999-02-21  Gordon Matzigkeit  <gord@trick.fig.org>

	* debian: Add to the distribution, since we maintain the GRUB
	Debian package ourselves.

	* grub/asmstub.c: New file to implement stubbed assembly functions
	under Unix.

	* stage1/Makefile: Delete spurious dependencies on Makefile.
	* stage2/Makefile: Likewise.
	* stage2_debug/Makefile: Likewise.
	* grub/Makefile: Likewise.

	* shared_src/fsys_ext2fs.c (ext2fs_dir): Follow symbolic links
	rather than giving an error.

	* shared_src/common.c (err_list): Use labeled elements to
	associate messages with error codes.
	* shared_src/shared.h: Make error codes into an enumerated type.

	* shared_src/common.c (err_list): Add ERR_SYMLINK_LOOP.
	* shared_src/shared.h: Likewise.

	* shared_src/char_io.c (bcopy): Don't make any assumptions about
	the length of an unsigned long.

	* grub/Makefile: Treat CFLAGS, CPPFLAGS, LDFLAGS according to
	GNU standards.
	* stage2/Makefile: Likewise.
	* e2fs_stage1_5/Makefile: Likewise.
	* fat_stage1_5/Makefile: Likewise.
	* ffs_stage1_5/Makefile: Likewise.

1999-02-20  Gordon Matzigkeit  <gord@trick.fig.org>

	* docs/index.html: Rename to grub.html, so that we don't hide
	files in this directory from a web browser.

1999-02-15  Gordon Matzigkeit  <gord@trick.fig.org>

	* Makefile.end (PROGS): Add grub.

	* grub/main.c: New file.

	* grub/Makefile: New directory to contain the stage2 Unix program.
