@@ -50,8 +50,15 @@ AC_CHECK_TOOL(OBJCOPY, objcopy)
 
 # Defined in acinclude.m4.
 grub_ASM_EXT_C
-grub_PROG_OBJCOPY_WORKS
-grub_GAS_ADDR32
+grub_PROG_OBJCOPY_ABSOLUTE
+if test "x$grub_cv_prog_objcopy_absolute" != xyes; then
+  AC_MSG_ERROR([GRUB requires a working absolute objcopy; upgrade your binutils])
+fi
+
+grub_ASM_ADDR32
+if test "x$grub_cv_asm_addr32" != xyes; then
+  AC_MSG_ERROR([GRUB requires GAS .code16 addr32 support; upgrade your binutils])
+fi
 
 # Create rules for our shared sources.
 AC_SUBST_FILE(SHARED_SRC_RULES)dnl
